--- a/BaseProject/BaseProject/Info.plist
+++ b/BaseProject/BaseProject/Info.plist
@@ -22,6 +22,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSCalendarsUsageDescription</key>
 	<string>是否允许此App使用日历?</string>
 	<key>NSRemindersUsageDescription</key>
